--- a/index.html
+++ b/index.html
@@ -57,12 +57,16 @@
     </style>
 </head>
 <body>
-    <h1>Mobile App Features</h1>
+    <h1>gStore Exception Management</h1>
     <div class="container">
         <div class="item">
             <div class="description">
-                <h2>Login Page</h2>
-                <p>The login page allows users to securely log into the app using their credentials. It features a sleek and minimalistic design.</p>
+                <h2>SS-U01</h2>
+                <p>
+                    Exception Scenario: This error occurs when the user scans the same item again. It simply means the item has already been scanned and the user need not try to scan it again. <br>
+                    Error Message: You have already scanned this item. Please scan another item.<br>
+                    Error Type: User Error<br>
+                </p>
             </div>
             <div class="image">
                 <img src="images/login-page.png" alt="Login Page">
