--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 
         .description p {
             margin: 5px 0 0;
+            max-width: 600px; /* Limits the text width */
+            word-wrap: break-word; /* Ensures long words break properly */
             color: #666;
         }
 
