--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App Features</title>
+    <title>gStore Exception Management</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,15 +59,15 @@
     </style>
 </head>
 <body>
-    <h1>gStore Exception Management</h1>
+    <h1>gStore Exception Management Documentation</h1>
     <div class="container">
         <div class="item">
             <div class="description">
                 <h2>SS-U01</h2>
                 <p>
-                    Exception Scenario: This error occurs when the user scans the same item again. It simply means the item has already been scanned and the user need not try to scan it again. <br>
-                    Error Message: You have already scanned this item. Please scan another item.<br>
-                    Error Type: User Error<br>
+                    <strong>Exception Scenario:</strong> This error occurs when the user scans the same item again. It simply means the item has already been scanned and the user need not try to scan it again. <br>
+                    <strong>Error Message:</strong> You have already scanned this item. Please scan another item.<br>
+                    <strong>Error Type:<strong> User Error<br>
                 </p>
             </div>
             <div class="image">
