--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         .description p {
             margin: 5px 0 0;
-            max-width: 400px; /* Limits the text width */
+            max-width: 500px; /* Limits the text width */
             word-wrap: break-word; /* Ensures long words break properly */
             color: #666;
         }
@@ -67,7 +67,7 @@
                 <p>
                     <strong>Exception Scenario:</strong> This error occurs when the user scans the same item again. It simply means the item has already been scanned and the user need not try to scan it again. <br>
                     <strong>Error Message:</strong> You have already scanned this item. Please scan another item.<br>
-                    <strong>Error Type:<strong> User Error<br>
+                    <strong>Error Type:</strong>strong> User Error<br>
                 </p>
             </div>
             <div class="image">
