--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="images/login-page.png" alt="Login Page">
+                <img src="https://github.com/AkhilGupta87/errors/blob/main/SS-U01.png" alt="SS-U01">
             </div>
         </div>
         <div class="item">
