--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .image img {
             max-width: 300px;
-            height: auto;
+            height: 600px;
             border-radius: 8px;
         }
     </style>
