--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 </head>
 <body>
     <h1>gStore Exception Management Documentation</h1>
+    <h2><u>gStore Sacn and Sort</u></h2>
     <div class="container">
         <div class="item">
             <div class="description">
