--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p>
                     <strong>Exception Scenario:</strong> This error occurs when the user scans the same item again. It simply means the item has already been scanned and the user need not try to scan it again. <br>
                     <strong>Error Message:</strong> You have already scanned this item. Please scan another item.<br>
-                    <strong>Error Type:</strong>strong> User Error<br>
+                    <strong>Error Type:<strong> User Error</strong><br>
                 </p>
             </div>
             <div class="image">
